--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ bower_components
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
-dist
+dist/
 
 # Dependency directories
 node_modules/
@@ -60,3 +60,6 @@ typings/
 
 # next.js build output
 .next
+
+# IDEs configurations
+.idea/
